@@ -19,16 +19,6 @@ gdm daemon:
  o XDMCP
  o TCP Wrappers for access control
 
-gdmgreeter:
-
- o Logo image (in any GdkImlib supported format)
- o A face browser like the one on NeXT/SGI
- o Tab-completion (no, doesn't work on passwords)
- o Halt, reboot and laptop suspend
- o Iconified login window (i.e. for xfishtank)
- o Session selection support (Package manager friendly)
- o Language selection support
-
 gdmlogin:
 
  o Logo image
@@ -61,4 +51,8 @@ logging (see README.install) and include your syslog and
 
 
 Martin K. Petersen, The Gnome Project
+
+
+PS. If you find gdm useful and have a spare Sun E450 please don't
+hesitate in donating it to me. Mail me for details. Thanks.
 
