@@ -1,3 +1,10 @@
+1999-05-09    <mkp@mkp.net>
+
+	* daemon/server.c (gdm_server_restart): Workaround for the
+ 	annoying gnome-name-server bug.
+
+	* Misc. fixes.
+
 1999-04-19  Martin Kasper Petersen  <mkp@mkp.net>
 
 	* Created gdm2 branch. Most of the daemon code has been revamped,
